# whats-now-playing

./: .buildinfo  .codecov.yml  .codespellignorelines  .codespellrc  .coveragerc  .gitattributes  .gitignore  .markdownlint.yaml  .sourcery.yaml  404.html  CHANGELOG.md  CHANGELOG_old.md  CLAUDE.md  CNAME  LICENSE.txt  MKDOCS_DEPLOYMENT.md  NOTICE.txt  NowPlaying.spec  README.md  TEMPLATE_BUILD_SYSTEM.md  WhatsNowPlaying.spec  analyze_audio_metadata.py  build-website.sh  builder.sh  conftest.py  contact.html  example_cache_usage.py  gallery.html  genindex.html  index.html  latest  llms.txt  mkdocs.yml  now_playing.py  nowplaying.py  nowplaying.pyproject  nppyi.py  objects.inv  properdocs.yml  properdocs_hooks.py  (+26 more)
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.yaml
.github/workflows/: docs-deploy.yaml  ghpages-main.yaml  ghpages-main.yaml.disabled  ghpages-test.yaml  macos-build.yml  macos26-build.yml  macos26-pyinstaller.yml  mkdocs-deploy.yaml  pyinstaller.yaml  testing.yaml  tufup-publish.yaml  tufup-resign.yaml  yetus.yaml
.yetus/: excludes.txt
4.2.0/: 404.html  index.html  sitemap.xml
4.2.0/contact/: index.html
4.2.0/extras/: index.html
4.2.0/gallery/: index.html
4.2.0/help/: index.html
4.2.0/input/: index.html
4.2.0/output/: index.html
4.2.0/quickstart/: index.html
4.2.0/recognition/: index.html
4.2.0/reference/: index.html
4.2.0/requests/: index.html
4.2.0/usage/: index.html
5.0.0/: 404.html  index.html  sitemap.xml
5.0.0-preview1/: 404.html  index.html  sitemap.xml
5.0.0-preview2/: 404.html  index.html  sitemap.xml
5.0.0-preview3/: 404.html  index.html  sitemap.xml
5.0.0-preview4/: 404.html  index.html  sitemap.xml
5.0.0-preview5/: 404.html  index.html  sitemap.xml
5.0.0-preview6/: 404.html  index.html  sitemap.xml
5.0.1/: 404.html  index.html  sitemap.xml
5.1.0/: 404.html  index.html  sitemap.xml
5.1.0-preview1/: 404.html  index.html  sitemap.xml
5.1.0-preview2/: 404.html  index.html  sitemap.xml
5.1.0-preview3/: 404.html  index.html  sitemap.xml
5.1.0-preview4/: 404.html  index.html  sitemap.xml
5.1.0-preview5/: 404.html  index.html  sitemap.xml
5.1.0-preview6/: 404.html  index.html  sitemap.xml
5.2.0/: 404.html  index.html  sitemap.xml
5.2.0-preview1/: 404.html  index.html  llms.txt  sitemap.xml
5.2.0-preview2/: 404.html  index.html  sitemap.xml
5.2.0-preview3/: 404.html  index.html  sitemap.xml
5.2.1/: 404.html  index.html  sitemap.xml
5.2.1-preview1/: 404.html  index.html  sitemap.xml
5.2.2/: 404.html  index.html  llms.txt  sitemap.xml
5.2.2-preview1/: 404.html  index.html  sitemap.xml
5.2.2-preview2/: 404.html  index.html  llms.txt  sitemap.xml
5.2.3-preview0+d1/: 404.html  index.html  sitemap.xml
_static/: documentation_options.js
bincomponents/: Dockerfile  entitlements.plist  extract_release_zips.sh  osx.icns  osxcodesign.sh  wnp_prod_key.pub
dev/: 404.html  contact.html  gallery.html  index.html  llms.txt  quickstart.html  requests.html  sitemap.xml  upgrading.html  usage.html
docs/: 404.html  conf.py  contact.md  features.md  filter.rst  gallery.md  index.md  index.rst  llms.txt  macros.py  quickstart.md  quickstart.rst  quirks.rst  requests.md  requirements.txt  settings.rst  templatevariables.rst  troubleshooting.rst  upgrading.md  usage.md
extras/: discogs.html  fanarttv.html  generalinfo.html  index.html  theaudiodb.html
help/: accuracy.html  bugreports.html  developers.html  howdoi.html  index.html  opensource.html  troubleshooting.html
input/: djuced.html  icecast.html  index.html  jriver.html  m3u.html  mpris2.html  serato.html  traktor.html  virtualdj.html  winmedia.html
nowplaying/: __init__.py  __main__.py  apicache.py  authwizard.py  bootstrap.py  cachemanager.py  cachingdecorator.py  config.py  db.py  discogsclient.py  exceptions.py  firstinstall.py  frozen.py  guessgame.py  guessgamesettings.py  hostmeta.py  imagecache.py  mdns_discovery.py  metadata.py  musicbrainz.py  musicbrainzclient.py  oauth2.py  obsws.py  plugin.py  pluginimporter.py  remote_settings.py  serato.py  settingsui.py  singleinstance.py  startup.py  subprocesses.py  systemtray.py  template_colors.py  textoutput.py  tinytag_fixes.py  trackpoll.py  trackrequests.py  twitchbot.py  txtoutput.py  types.py  (+8 more)
output/: discord.html  index.html  kickbot.html  obswebsocket.html  textoutput.html  twitchbot.html  webserver.html
overrides/: main.html
recognition/: acoustidmb.html  generalinfo.html  index.html
reference/: comparisons.html  index.html  templatevariables.html
resources/: NowPlaying.spec
settings/: filter.html  general.html  index.html  quirks.html
template-src/: vendor.yaml
test/: test_acoustidmb.py  test_acrcloud.py  test_metadata.py  test_musicbrainz.py  test_serato.py
tests/: conftest.py  test_acoustidmb.py  test_acoustidmb_joinphrases.py  test_acrcloud.py  test_apicache.py  test_artistextras.py  test_artistextras_core.py  test_artistextras_discogs.py  test_artistextras_fanarttv.py  test_artistextras_lastfm.py  test_artistextras_theaudiodb.py  test_artistextras_wikimedia.py  test_bio_dedup.py  test_config.py  test_config_export_import.py  test_db.py  test_denon.py  test_discord.py  test_djuced.py  test_guessgame.py  test_has_tracks_by_artist.py  test_hostmeta.py  test_icecast.py  test_imagecache.py  test_input_djaypro.py  test_inputs_earshot.py  test_jriver.py  test_kick_chat.py  test_kick_integration.py  test_kick_launch.py  test_kick_oauth2.py  test_kick_settings.py  test_m3u.py  test_main.py  test_mdns_discovery.py  test_metadata.py  test_metadata_multi_artist.py  test_mpris2.py  test_musicbrainz.py  test_notifications_remote.py  (+39 more)
tests-qt/: conftest.py  test_background_prefetch.py  test_bootstrap.py  test_firstinstall.py  test_settingsui.py  test_systemtray.py  test_tufup_client.py
tools/: analyze_audio_metadata.py  build_icons.py  build_templates.py  example_cache_usage.py  gifwords_inject.py  probe_check_version.py  regenerate_shas.sh  setupnltk.py  tufup_publish.py  tufup_repo_add_bundle.py  tufup_repo_init.py  tufup_repo_settings.py  updateshas.py
(+2306 files in other folders)
