[metadata]
name = NowPlaying

[options]
include_package_data = True
packages = nowplaying
install_requires =
  jinja2==2.11.3
  lxml==4.6.3
  pyinstaller==4.2
  PySide2==5.15.2
  requests==2.25.1
  tinytag==1.5.0
  urllib3==1.26.4
  versioneer

[versioneer]
VCS = git
style = pep440
versionfile_source = nowplaying/version.py
versionfile_build = nowplaying/version.py
tag_prefix = ''
